# vk-mini-ml

./: README.md  pyproject.toml
notebooks/: solution.ipynb
src/: models.py  utils.py
