[tool.poetry]
name = "vk-mini-ml"
version = "0.1.0"
description = ""
authors = ["RussianFreak <alapteff@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
seaborn = "^0.13.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
